--- a/Coding Rooms 1.1
+++ b/Coding Rooms 1.1
@@ -1,4 +1,6 @@
 number1=input("Give a number ")
 number2=input("Give another number ")
 number3=input("Give one more number ")
-print(number1, number2, number3)
+print(number1)
+print(number2)
+print(number3)
